[package]
name = "kate-ptau-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-std = { version = "0.3", features = ["parallel"] }
ark-ff = { version = "0.3" }
ark-ec = { version = "0.3" }
ark-serialize = { version = "0.3" }
ark-bls12-381 = { version = "0.3", features = ["curve"] }
rand = "0.8.4"
eyre = "0.6.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
ruint = { version = "1.3.0", features = ["serde", "ark-ff"] }
tracing = "0.1"
hex = "0.4.3"
rayon = "1.5.3"
getrandom = { version = "0.2.7", features = ["js"] }
console_error_panic_hook = "0.1.7"
blst = "0.3.10"
rand_chacha = "0.3.1"

[target."wasm32-unknown-unknown".dependencies]
js-sys = { version = "0.3.58"}
wasm-bindgen = { version = "0.2.74"}
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"]}

[profile.release-optimized]
inherits = "release"
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true